# ChangeLog for net-analyzer/nagios-sap-ccms-plugin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-sap-ccms-plugin/ChangeLog,v 1.9 2010/10/20 00:31:55 jer Exp $

  20 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  nagios-sap-ccms-plugin-0.8.ebuild:
  And "fix" the librfccm.so related QA warnings.

  20 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  nagios-sap-ccms-plugin-0.8.ebuild:
  Install librfccm.so too.

*nagios-sap-ccms-plugin-0.8 (19 Oct 2010)

  19 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  +nagios-sap-ccms-plugin-0.8.ebuild,
  +files/nagios-sap-ccms-plugin-0.8-gentoo.patch:
  Version bump by Elias Probst (bug #283557). Fix quoting issue. Use system
  iniparser (bug #259717). Respect LDFLAGS (bug #337888), CC.

  07 Mar 2009; Markus Meier <maekke@gentoo.org>
  nagios-sap-ccms-plugin-0.7.3-r1.ebuild:
  x86 stable, bug #256177

*nagios-sap-ccms-plugin-0.7.3-r1 (28 Jun 2008)

  28 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +nagios-sap-ccms-plugin-0.7.3-r1.ebuild:
  Revbump for nagios-3, fix quotation

  30 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  nagios-sap-ccms-plugin-0.7.3.ebuild:
  Fix ownership of /usr/nagios/libexec for bug #154293

  14 May 2007; Markus Ullmann <jokey@gentoo.org>
  nagios-sap-ccms-plugin-0.7.3.ebuild:
  Stable on x86 wrt bug #178106

  01 May 2007; Marius Mauch <genone@gentoo.org>
  nagios-sap-ccms-plugin-0.7.3.ebuild:
  Replacing einfo with elog

*nagios-sap-ccms-plugin-0.7.3 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +nagios-sap-ccms-plugin-0.7.3.ebuild:
  Initial commit, thanks to Elias Probst in bug #126146 for providing the ebuild
